--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+  <audio controls=false autoplay loop>
+    <source src="/audio/happy-birthday.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
   <script src="js/pixi.js/dist/pixi.js"></script>
   <script src="js/main.js"></script>
 </body>
