--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <audio controls=false autoplay loop>
+  <audio autoplay loop>
     <source src="/audio/happy-birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
