--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <audio autoplay loop>
-    <source src="/audio/happy-birthday.mp3" type="audio/mpeg">
+    <source src="audio/happy-birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
