--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
-  <audio autoplay loop>
+  <audio autoplay loop id="audio">
     <source src="audio/happy-birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+  <script>
+    var audio = document.getElementById("audio");
+    audio.volume = 0.5;
+  </script>
 
   <script src="js/pixi.js/dist/pixi.js"></script>
   <script src="js/main.js"></script>
